--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!--<link href="./Foundation Template   Banner Theme_files/css" rel="stylesheet" type="text/css">-->
 <section class="herospecial">
   <video autoplay loop poster="img/poster.jpg" id="bgvid">
-<source src="background.mp4" type="video/mp4">
+<source src="img/background.mp4" type="video/mp4">
 </video>
 <div class="row">
 <div class="large-12 columns">
