--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <link rel="stylesheet" href="foundation/css/foundation.scss">
  <link rel="icon" 
       type="image/ico" 
-      href="favicon.ico">
+      href="img/favicon.ico">
 <link rel="stylesheet" href="http://foundation.zurb.com/assets/css/templates/foundation.css">
 <link rel="stylesheet" href="http://foundation.zurb.com/assets/css/template-themes/banner-theme.css">
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -62,7 +62,7 @@
       <!--maybe make an animation here that turns LRNGCRV into LearningCurve when the top bar gets sticky-->
     </li>
      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="favicon.ico"><span>Menu</span></a></li>
+    <li class="toggle-topbar menu-icon"><a href="img/favicon.ico"><span>Menu</span></a></li>
   </ul>
 
   <section class="top-bar-section" style="z-index:1"> 
