--- a/index.html
+++ b/index.html
@@ -56,24 +56,23 @@
 
 <div class="contain-to-grid sticky" style="z-index:2">
 <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large" style="z-index:2">
-  <ul class="title-area">
+  <!--<ul class="title-area">
     <li class="name">
       <h1><a href="#">LearningCurve</a></h1>
-      <!--maybe make an animation here that turns LRNGCRV into LearningCurve when the top bar gets sticky-->
     </li>
      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="img/favicon.ico"><span>Menu</span></a></li>
-  </ul>
+    <!--<li class="toggle-topbar menu-icon"><a href="i#"><span>Menu</span></a></li>
+  </ul>-->
 
-  <section class="top-bar-section" style="z-index:1"> 
-    <ul class="left" style="text-align: center">
-      <li class="has-dropdown"><a href="#" id="KlinicSlabMedium">AP CURRICULUMS</a></li>
+  <section class="top-bar-section" style="z-index:1; width:100%; display: block; width: 100%"> 
+    <ul class="" style="">
+      <li class="has-dropdown top-bar-button"><a href="#" id="KlinicSlabMedium">AP CURRICULUMS</a></li>
       <li class="divider"></li>
-      <li><a href="#" id="KlinicSlabMedium">TUTORING</a></li>
+      <li class="top-bar-button"><a href="#" id="KlinicSlabMedium">TUTORING</a></li>
       <li class="divider"></li>
-      <li><a href="#" id="KlinicSlabMedium">CONTACT US</a></li>
+      <li class="top-bar-button"><a href="#" id="KlinicSlabMedium">CONTACT US</a></li>
       <li class="divider"></li>
-      <li><a href="#" id="KlinicSlabMedium">BECOME A TUTOR</a></li>
+      <li class="top-bar-button"><a href="#" id="KlinicSlabMedium">BECOME A TUTOR</a></li>
     </ul>
   </section>
 </nav>
