top bar touchup

--- a/index.html
+++ b/index.html
@@ -42,37 +42,29 @@
   </div>
 <h3>Helping students achieve <i class='i'>more.</i></h3>
 <div class="row">
-<!--<div class="large-12 columns large-centered">
-<div class="sticky">
-<nav class = "top-bar" data-topbar role="navigation" data-options="sticky_on: large">
-<ul class="button-group even-4">
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#" class="button" >Home</a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#" class="button" >AP Review</a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#" class="button" >Tutoring</a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#" class="button" >Essay Editing</a></li>
-</div>
-</ul>
-</nav>-->
+
+
 
 <div class="contain-to-grid sticky" style="z-index:2">
-<nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large" style="z-index:2">
-  <!--<ul class="title-area">
-    <li class="name">
-      <h1><a href="#">LearningCurve</a></h1>
-    </li>
-     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <!--<li class="toggle-topbar menu-icon"><a href="i#"><span>Menu</span></a></li>
-  </ul>-->
 
-  <section class="top-bar-section" style="z-index:1; width:100%; display: block; width: 100%"> 
+<nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large" style="z-index:2">
+  <ul class="title-area">
+     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+    <img src="img/logoIcon.png" style="height:45px; padding-bottom:2px"> 
+  </ul>
+
+  <section class="top-bar-section" style="z-index:1; width:100%; display: block; width: 100%">
+
     <ul class="" style="">
-      <li class="has-dropdown top-bar-button"><a href="#" id="KlinicSlabMedium">AP CURRICULUMS</a></li>
+
+      <li class="has-dropdown top-bar-button"><a href="#" id="button-text">AP CURRICULUMS</a></li>
       <li class="divider"></li>
-      <li class="top-bar-button"><a href="#" id="KlinicSlabMedium">TUTORING</a></li>
+      <li class="top-bar-button"><a href="/tutoring.html" id="button-text">TUTORING</a></li>
       <li class="divider"></li>
-      <li class="top-bar-button"><a href="#" id="KlinicSlabMedium">CONTACT US</a></li>
+      <li class="top-bar-button"><a href="#" id="button-text">CONTACT US</a></li>
       <li class="divider"></li>
-      <li class="top-bar-button"><a href="#" id="KlinicSlabMedium">BECOME A TUTOR</a></li>
+      <li class="top-bar-button"><a href="#" id="button-text">BECOME A TUTOR</a></li>
     </ul>
   </section>
 </nav>
