taking out trash

--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LearningCurve</title>
 
-<!-- <link rel="stylesheet" href="foundation-5.4.6/css/foundation.css">-->
- <link rel="stylesheet" href="foundation/css/foundation.scss">
- <link rel="icon" 
-      type="image/ico" 
-      href="img/favicon.ico">
-<link rel="stylesheet" href="http://foundation.zurb.com/assets/css/templates/foundation.css">
-<link rel="stylesheet" href="http://foundation.zurb.com/assets/css/template-themes/banner-theme.css">
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+ <link rel="icon" type="image/ico" href="img/favicon.ico">
+ <link rel="stylesheet" href="foundation/css/foundation.css">
 <script src="foundation/js/vendor/modernizr.js"></script>
 <script src="foundation/js/vendor/jquery.js"></script>
   <script src="foundation/js/foundation/foundation.js"></script>
@@ -19,17 +13,14 @@
   <script>
     $(document).foundation();
   </script>
-
-<script src="./Foundation Template   Banner Theme_files/modernizr.js"></script><style type="text/css"></style>
 <link rel="stylesheet" href="css/app.css">
 </head>
 
 
 
 <body>
-<!--<link href="./Foundation Template   Banner Theme_files/css" rel="stylesheet" type="text/css">-->
-<section class="herospecial">
-  <video autoplay loop poster="img/poster.jpg" id="bgvid">
+<section class="top">
+  <video autoplay loop poster="img/poster.png" id="bgvid">
 <source src="img/background.mp4" type="video/mp4">
 </video>
 <div class="row">
@@ -58,7 +49,16 @@
 
     <ul class="" style="">
 
-      <li class="has-dropdown top-bar-button"><a href="#" id="button-text">AP CURRICULUMS</a></li>
+      <li class="has-dropdown top-bar-button"><a href="#" id="button-text">AP CURRICULUMS</a>
+        <ul class="dropdown">
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">Calculus AB</a></li>
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">Calculus BC</a></li>
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">Statistics</a></li>
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">Biology</a></li>
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">Chemistry</a></li>
+          <li><a style="font-size: 18px" id="FiraSansOT" href="">US History</a></li>
+        </ul>
+      </li>
       <li class="divider"></li>
       <li class="top-bar-button"><a href="/tutoring.html" id="button-text">TUTORING</a></li>
       <li class="divider"></li>
@@ -95,10 +95,10 @@
 <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
 <div class="large-4 columns">
 <ul class="small-block-grid-2">
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src="img/john.jpg"></a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src="img/jigar.png"></a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src="./Foundation Template   Banner Theme_files/dog3.png"></a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src="./Foundation Template   Banner Theme_files/dog4.png"></a></li>
+<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src=""></a></li>
+<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src=""></a></li>
+<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src=""></a></li>
+<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src=""></a></li>
 </ul>
 </div>
 </div>
@@ -135,15 +135,11 @@
 </div>
 </footer>
 <script>
-  document.write('<script src=' +
-  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-  '.js><\/script>')
-</script><script src="./Foundation Template   Banner Theme_files/zepto.js"></script>
-<script>
       $(document).foundation();
 
       var doc = document.documentElement;
       doc.setAttribute('data-useragent', navigator.userAgent);
     </script>
 
-<div onclick="javascript:((function(c){(c.demoboPortal&amp;&amp;c.demoboPortal.set(&quot;mode&quot;,&quot;EXTENSION&quot;));c._extension=1;var d=window.__dmtg;((!c.demoboPortal&amp;&amp;function(){var a=new Date,b=c.document.createElement(&quot;script&quot;),e=&quot;//d1hew6xzj9n4kw.cloudfront.net&quot;;window.demoboBase=e;b.src=&quot;//d32q09dnclw46p.cloudfront.net/entry.js?&quot;+a.getTime();b.className=&quot;demoboJS&quot;;c.document.body&amp;&amp;c.document.body.appendChild(b)})||d)()})(window))" id="toggle"></div><div id="load" onclick="javascript:(function(c){(c.demoboPortal&amp;&amp;c.demoboPortal.set(&quot;mode&quot;,&quot;EXTENSION&quot;));!c.demoboPortal&amp;&amp;(function(){c._extension=1;var a=new Date,b=c.document.createElement(&quot;script&quot;),e=&quot;//d1hew6xzj9n4kw.cloudfront.net&quot;;window.demoboBase=e;b.src=&quot;//d32q09dnclw46p.cloudfront.net/entry.js?&quot;+a.getTime();b.className=&quot;demoboJS&quot;;c.document.body&amp;&amp;c.document.body.appendChild(b)}());})(window)"></div><iframe width="0" height="0" frameborder="0" src="about:blank" id="GINGER_SOFTWARE_bubblesIFrame" scrolling="no" style="border: 0px solid; display: none; position: absolute; z-index: 2147483647; height: 0px; width: 0px; background-color: transparent;"></iframe><div id="GingerWidgetInfo" style="display:none;">{"version":"0.1.0.525","isExtension":true,"extensionName":"Chrome"}</div></body></html>
+</body>
+</html>
