--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 
 <body>
+<div class="gradientfiller"></div>
 <section class="top">
   <video autoplay loop poster="img/poster.png" id="bgvid">
 <source src="img/background.mp4" type="video/mp4">
@@ -34,7 +35,12 @@
 <h3>Helping students achieve <i class='i'>more.</i></h3>
 <div class="row">
 
-
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
 
 <div class="contain-to-grid sticky" style="z-index:2">
 
@@ -69,13 +75,8 @@
   </section>
 </nav>
 </div>
-
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="row" >
+<section class="" style="position: block">
+<div class="row">
 <div class="large-12 columns about-box">
 <div class="black-box">
 <h2 class='pink'>WHAT WE DO.</h2>
@@ -86,8 +87,7 @@
 </div>
 </section>
 
-
-<section class="hero-content" style="z-index:0;">
+<section class="content" style="z-index:0; position: block">
 <div class="row">
 <div class="large-12 columns" class="about-us">
 <h4>WHO ARE WE?</h4>
@@ -123,7 +123,7 @@
 <footer>
 <div class="row">
 <div class="large-6 columns">
-<p>© Copyright no one at all. Go to town.</p>
+<p style="color:white">© Copyright LearningCurve 2014</p>
 </div>
 <div class="large-6 columns">
 <ul class="inline-list right">
