--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 </div>
 </section>
 
-<section class="content" style="z-index:0; position: block">
+<section class="content" style="z-index:0; position: block; background-color: rgb(238, 238, 238)">
 <div class="row">
 <div class="large-12 columns" class="about-us">
 <h4>WHO ARE WE?</h4>
-<p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
-<p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+<p>LearningCurve was founded by Omar Alhait, a high school senior in the California Bay Area, with the original intention of providing assistance to his AP Biology class.</p>
+<p>With a few months, a simple project evolved into LearningCurve as it is now, with a free one-on-one tutoring service and a variety of AP note guides.</p>
 <div class="large-4 columns">
 <ul class="small-block-grid-2">
 <li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src=""></a></li>
@@ -102,16 +102,16 @@
 </ul>
 </div>
 </div>
-
 </div>
 </section>
+
 <div class="row">
 <div class="large-12 columns">
 <div class="panel">
 <div class="row">
 <div class="large-9 columns">
 <h4>Get in touch!</h4>
-<p>We're open 9am - 5pm, Monday through Saturdays.</p>
+<p>Got questions or feedback? Reach us at staff@lrngcrv.com and we'll get back to you within a business day.</p>
 </div>
 <div class="large-3 columns">
 <a href="http://foundation.zurb.com/templates/banner-theme.html#" class="radius button right">Contact Us</a>
