--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <h2 class='pink'>WHAT WE DO.</h2>
 <p id='roboto'>We are a tutoring service that specializes in getting you ready for whatever test you have to ace. With a team of elite and attentive tutors ready to help you out, you can count on us to help boost your score for the SAT, ACT, and a great amount of AP tests.
 </p><p id='roboto'>Interested in what we offer? Scroll down to learn more about us, and our story.</p>
-<a href="http://foundation.zurb.com/templates/banner-theme.html#" class="secondary small button">Learn More →</a>
+<a href="#" class="secondary small button">Learn More →</a>
 </div>
 </div>
 </section>
@@ -95,10 +95,10 @@
 <p>With a few months, a simple project evolved into LearningCurve as it is now, with a free one-on-one tutoring service and a variety of AP note guides.</p>
 <div class="large-4 columns">
 <ul class="small-block-grid-2">
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src=""></a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src=""></a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src=""></a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#"><img src=""></a></li>
+<li><a href="#"><img src=""></a></li>
+<li><a href="#"><img src=""></a></li>
+<li><a href="#"><img src=""></a></li>
+<li><a href="#"><img src=""></a></li>
 </ul>
 </div>
 </div>
@@ -114,7 +114,7 @@
 <p>Got questions or feedback? Reach us at staff@lrngcrv.com and we'll get back to you within a business day.</p>
 </div>
 <div class="large-3 columns">
-<a href="http://foundation.zurb.com/templates/banner-theme.html#" class="radius button right">Contact Us</a>
+<a href="#" class="radius button right">Contact Us</a>
 </div>
 </div>
 </div>
@@ -127,9 +127,9 @@
 </div>
 <div class="large-6 columns">
 <ul class="inline-list right">
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#">About</a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#">Terms of Use</a></li>
-<li><a href="http://foundation.zurb.com/templates/banner-theme.html#">Privacy Policy</a></li>
+<li><a href="#">About</a></li>
+<li><a href="#">Terms of Use</a></li>
+<li><a href="#">Privacy Policy</a></li>
 </ul>
 </div>
 </div>
