--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <div class="row">
 <div class="large-12 columns" class="about-us">
 <h4>WHO ARE WE?</h4>
-<p>LearningCurve was founded by Omar Alhait, a high school senior in the California Bay Area, with the original intention of providing assistance to his AP Biology class.</p>
+<p><i>LearningCurve was founded by Omar Alhait, a high school senior in the California Bay Area, with the original intention of providing assistance to his AP Biology class.</i></p>
 <p>With a few months, a simple project evolved into LearningCurve as it is now, with a free one-on-one tutoring service and a variety of AP note guides. Our goal now is to amplify the original intention we started out with: providing free help that can equalize the playing field between all students so that access to valuable tutoring is not a luxury of the priviliged. We believe that socioeconomic status should not have to do with success, and so we made LearningCurve to provide help with virtually any subject to students of all backgrounds, free of charge.</p>
 <div class="large-4 columns">
 <ul class="small-block-grid-2">
