--- a/tutoring.html
+++ b/tutoring.html
@@ -3,6 +3,6 @@
 	<title>LearningCurve Tutoring</title>
 </head>
 <body>
-
+<script async src="https://static.medium.com/embed.js"></script><a class="m-story" data-collapsed="true" href="https://medium.com/@oalhait/1829634d7e18">Every Bigot is a Prius, and Every Radical is a Leaf</a>
 </body>
 </html>
