contact-us, find a tutor pages done

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         </ul>
       </li>
       <li class="divider"></li>
-      <li class="top-bar-button"><a href="/tutoring.html" id="button-text">TUTORING</a></li>
+      <li class="top-bar-button"><a href="tutoring.html" id="button-text">FIND A TUTOR</a></li>
       <li class="divider"></li>
-      <li class="top-bar-button"><a href="#" id="button-text">CONTACT US</a></li>
+      <li class="top-bar-button"><a href="contact-us.html" id="button-text">CONTACT US</a></li>
       <li class="divider"></li>
       <li class="top-bar-button"><a href="#" id="button-text">BECOME A TUTOR</a></li>
     </ul>
