become a tutor done

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <li class="divider"></li>
       <li class="top-bar-button"><a href="contact-us.html" id="button-text">CONTACT US</a></li>
       <li class="divider"></li>
-      <li class="top-bar-button"><a href="#" id="button-text">BECOME A TUTOR</a></li>
+      <li class="top-bar-button"><a href="become-a-tutor.html" id="button-text">BECOME A TUTOR</a></li>
     </ul>
   </section>
 </nav>
