--- a/index.html
+++ b/index.html
@@ -80,14 +80,15 @@
 <div class="large-12 columns about-box">
 <div class="black-box">
 <h2 class='pink'>WHAT WE DO.</h2>
-<p id='roboto'>We are a tutoring service that specializes in getting you ready for whatever test you have to ace. With a team of elite and attentive tutors ready to help you out, you can count on us to help boost your score for the SAT, ACT, and a great amount of AP tests.
-</p><p id='roboto'>Interested in what we offer? Scroll down to learn more about us and our story.</p>
-<a href="#" class="secondary small button">Learn More →</a>
+<p id='maven'>We are a tutoring service that specializes in getting you ready for whatever test you have to ace. With a team of elite and attentive tutors ready to help you out, you can count on us to help boost your score for the SAT, ACT, and a great amount of AP tests.</p>
+<p id='maven'>Interested in what we offer? Scroll down to learn more about us and our story.</p>
+<span class="scrolldown">Scroll down to learn more</span>
+<img src="img/arrow.png" width="76" height="39" alt="" class="arrow">
 </div>
 </div>
 </section>
 
-<section class="content" style="z-index:0; position: block; background-color: rgb(238, 238, 238)">
+<section class="content" style="z-index:0; position: block; background-color:rgb(218, 223, 225)">
 <div class="row">
 <div class="large-12 columns" class="about-us">
 <h4>WHO ARE WE?</h4>
@@ -103,27 +104,10 @@
 </div>
 </div>
 </div>
-</section>
-
-<div class="row">
-<div class="large-12 columns">
-<div class="panel">
-<div class="row">
-<div class="large-9 columns">
-<h4>Get in touch!</h4>
-<p>Got questions or feedback? Reach us at staff@lrngcrv.com and we'll get back to you within a business day.</p>
-</div>
-<div class="large-3 columns">
-<a href="#" class="radius button right">Contact Us</a>
-</div>
-</div>
-</div>
-</div>
-</div>
 <footer>
 <div class="row">
 <div class="large-6 columns">
-<p style="color:white">© Copyright LearningCurve 2014</p>
+<p style="color:black">© Copyright LearningCurve 2014</p>
 </div>
 <div class="large-6 columns">
 <ul class="inline-list right">
@@ -134,6 +118,9 @@
 </div>
 </div>
 </footer>
+</section>
+
+
 <script>
       $(document).foundation();
 
