small ass changes

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 </div>
 <div class="large-6 columns">
 <ul class="inline-list right">
-<li><a href="#">About</a></li>
-<li><a href="#">Terms of Use</a></li>
-<li><a href="#">Privacy Policy</a></li>
+<li><a href="#" style="color:black">About</a></li>
+<li><a href="#" style="color:black">Terms of Use</a></li>
+<li><a href="#" style="color:black">Privacy Policy</a></li>
 </ul>
 </div>
 </div>
