--- a/index.html
+++ b/index.html
@@ -79,35 +79,30 @@
 <div class="row">
 <div class="large-12 columns about-box">
 <div class="black-box">
-<h2 class='pink'>WHAT WE DO.</h2>
-<p id='maven'>We are a tutoring service that specializes in getting you ready for whatever test you have to ace. With a team of elite and attentive tutors ready to help you out, you can count on us to help boost your score for the SAT, ACT, and a great amount of AP tests.</p>
-<p id='maven'>Interested in what we offer? Scroll down to learn more about us and our story.</p>
+<h3 style="font-family:Maven3; font-size: 42px">WHAT WE DO.</h3>
+<p style="text-align:center; font-weight:normal; color:white">We are a tutoring service that specializes in getting you ready for whatever test you have to ace. With a team of elite and attentive tutors ready to help you out, you can count on us to help boost your score for the SAT, ACT, and a great amount of AP tests.</p>
+<p style="text-align:center; font-weight:normal; color:white">Interested in what we offer? Scroll down to learn more about us and our story.</p>
 <span class="scrolldown">Scroll down to learn more</span>
 <img src="img/arrow.png" width="76" height="39" alt="" class="arrow">
 </div>
 </div>
 </section>
 
-<section class="content" style="z-index:0; position: block; background-color:rgb(218, 223, 225)">
+<section class="content" style="z-index:0; position: block; background-color:rgb(228, 241, 254)">
 <div class="row">
 <div class="large-12 columns" class="about-us">
-<h4>WHO ARE WE?</h4>
+<h3 id="maven" style="color:black; font-size:42px; text-transform:uppercase; align:center">Who Are We?</h3>
 <p><i>LearningCurve was founded by Omar Alhait, a high school senior in the California Bay Area, with the original intention of providing assistance to his AP Biology class.</i></p>
 <p>With a few months, a simple project evolved into LearningCurve as it is now, with a free one-on-one tutoring service and a variety of AP note guides. Our goal now is to amplify the original intention we started out with: providing free help that can equalize the playing field between all students so that access to valuable tutoring is not a luxury of the priviliged. We believe that socioeconomic status should not have to do with success, and so we made LearningCurve to provide help with virtually any subject to students of all backgrounds, free of charge.</p>
-<div class="large-4 columns">
-<ul class="small-block-grid-2">
-<li><a href="#"><img src=""></a></li>
-<li><a href="#"><img src=""></a></li>
-<li><a href="#"><img src=""></a></li>
-<li><a href="#"><img src=""></a></li>
-</ul>
-</div>
+<br>
+<h3 id="maven" style="color:black; font-size: 32px; text-transform: uppercase">Our Current Locations: </h3>
+<iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/oalhait.l6k74bnb/attribution,geocoder,share.html?access_token=pk.eyJ1Ijoib2FsaGFpdCIsImEiOiJDN1Z2Uk5jIn0.ijs0u-XBS0635OFNUssilw'></iframe>
 </div>
 </div>
 <footer>
 <div class="row">
 <div class="large-6 columns">
-<p style="color:black">© Copyright LearningCurve 2014</p>
+<span style="color:black">© Copyright LearningCurve 2015</span>
 </div>
 <div class="large-6 columns">
 <ul class="inline-list right">
