Revert ddea297..6ad510a
This rolls back to commit ddea297dfd054ee7d19acd2ad3712b8cc9a48db8.

--- a/tutoring.html
+++ b/tutoring.html
@@ -1,10 +1,9 @@
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<<<<<<< HEAD
-	<title></title>
-=======
 	
-	<title>Tutoring Request</title>
+	<title>LearningCurve: Tutoring Request</title>
 
 	
 <style type="text/css">
@@ -22,9 +21,9 @@
 			border:0;
 		}
 	</style>
->>>>>>> parent of ff54be4... Revert "Revert 5aff99e..dcc6f98"
 </head>
 <body>
-
+	<iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://omaralhait.typeform.com/to/tkSDyp"></iframe>
+	<script type="text/javascript" src="https://s3-eu-west-1.amazonaws.com/share.typeform.com/embed.js"></script>
 </body>
 </html>
